--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -12,6 +12,7 @@
 	}
 }
 .logo {
+	float: left;
 	margin: 0;
 	padding: 0;
 	line-height: 1;
@@ -24,9 +25,8 @@
 	}
 }
 .logo a {
-	float: left;
+	display: block;
 	@media screen and (min-width: $break-medium) {
-		float: none;
 		position: absolute;
 		left: 50%;
 		margin-left: -69.5px;
