--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -15,6 +15,7 @@
 	float: left;
 	margin: 0;
 	padding: 0;
+	position: relative;
 	line-height: 1;
 	& img {
 		display: block;
@@ -22,6 +23,9 @@
 		@media screen and (min-width: $break-medium) {
 			width: auto;
 		}
+	}
+	@media screen and (min-width: $break-medium) {
+		position: static;
 	}
 }
 .logo a {
