--- a/themes/homecoming/scss/site/_header.scss
+++ b/themes/homecoming/scss/site/_header.scss
@@ -18,6 +18,7 @@
 	position: relative;
 	line-height: 1;
 	z-index: 100;
+	width: 120px;
 	& img {
 		display: block;
 		width: 120px;
@@ -27,7 +28,11 @@
 	}
 	@media screen and (min-width: $break-medium) {
 		position: static;
+		width: auto;
 	}
+}
+.lt-ie9 .logo {
+
 }
 .logo a {
 	display: block;
