--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -128,6 +128,11 @@ Hero Carousel
 		margin-top: -108px;
 	}
 }
+.lt-ie9 .hero {
+	@media screen and (min-width: $break-medium) {
+		margin-top: 0;
+	}
+}
 .featuredimage {
 	padding-top: 40%;
 	background: #000;
@@ -146,7 +151,7 @@ Hero Carousel
 		padding-top: 20%;
 	}
 }
-.lt-ie9 .featuredimage {
+/*.lt-ie9 .featuredimage {
 	@media (min-width: $break-medium) {
 		height: 322;
 		padding-top: 0;
@@ -154,7 +159,7 @@ Hero Carousel
 	@media (min-width: $break-large) {
 		height: 340px;
 	}
-}
+}*/
 .HomePage .featuredimage {
 	padding-top: 40%;
 	@media (min-width: $break-xxlarge) {
