--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -151,15 +151,20 @@ Hero Carousel
 		padding-top: 20%;
 	}
 }
-/*.lt-ie9 .featuredimage {
+.lt-ie9 .featuredimage {
 	@media (min-width: $break-medium) {
-		height: 322;
-		padding-top: 0;
+		padding-top: 32%;
 	}
 	@media (min-width: $break-large) {
-		height: 340px;
+		padding-top: 26%;
 	}
-}*/
+	@media (min-width: $break-xlarge) {
+		padding-top: 20%;
+	}
+	@media (min-width: $break-xxlarge) {
+		padding-top: 20%;
+	}
+}
 .HomePage .featuredimage {
 	padding-top: 40%;
 	@media (min-width: $break-xxlarge) {
