--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -92,11 +92,21 @@ Second level drop-down menu
 		left: auto;
 	}
 }
-.nav-main > li:last-of-type:hover .level-2 {
+.lt-ie9 .nav-main > li > a:hover .level-2 {
+	@media screen and (min-width: $break-medium) {
+		max-height: 200px;
+		left: 0;
+		left: auto;
+	}
+}
+.nav-main > li.last:hover .level-2 {
 	left: auto;
 	right: 0;
 }
-
+.lt-ie9 .nav-main > li.last a:hover .level-2 {
+	left: auto;
+	right: 0;
+}
 
 
 /* ---------------------------------------------------------------
