--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -87,14 +87,14 @@ Second level drop-down menu
 }
 .nav-main > li:hover .level-2 {
 	@media screen and (min-width: $break-medium) {
-		max-height: 200px;
+		height: 100px;
 		left: 0;
 		left: auto;
 	}
 }
 .lt-ie9 .nav-main li.hover .level-2 {
 	@media screen and (min-width: $break-medium) {
-		max-height: 200px;
+		height: 200px;
 		left: 0;
 		left: auto;
 	}
