--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -25,11 +25,9 @@
 
 /* Plugins
 -------------------------------------------*/
-@import "plugins/_flexslider";
+@import "plugins/_slick.scss";
 @import "plugins/jquery.fancybox";
 @import "plugins/jquery.fancybox-buttons";
-@import "plugins/jquery.fancybox-thumbs";
-
 
 
 /* Layout
