--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -118,9 +118,12 @@ Layout
 Hero Carousel
 --------------------------------------------------------------- */
 .slick-hero {
+
 	@media screen and (min-width: $break-medium) {
 		max-height: 400px;
 		overflow: hidden;
+		position: relative;
+		z-index: 5;
 	}
 }
 .hero {
