--- a/themes/homecoming/css/master.css
+++ b/themes/homecoming/css/master.css
@@ -3862,19 +3862,19 @@ Hero Carousel
     position: relative;
     z-index: 5; } }
 
-.hero {
-  display: none; }
-  @media screen and (min-width: 480px) {
-    .hero {
-      display: block;
-      position: relative;
-      z-index: 5; } }
-  @media screen and (min-width: 768px) {
-    .hero {
-      margin-top: -108px; } }
+@media screen and (min-width: 768px) {
+  .HomePage .slick-hero {
+    max-height: 500px; } }
+
+.slick-hero img {
+  width: 100%; }
 
 @media screen and (min-width: 768px) {
-  .lt-ie9 .hero {
+  .hero-wrapper {
+    margin-top: -105px; } }
+
+@media screen and (min-width: 768px) {
+  .lt-ie9 .hero-wrapper {
     margin-top: 0; } }
 
 .featuredimage {
