events by date and announcements changed h5 to h3
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/css/master.css
+++ b/themes/homecoming/css/master.css
@@ -3959,6 +3959,7 @@ Events by Date
   border-top: 4px solid #ffce39; }
 
 .eventsbydate .title, .announcements .title {
+  font-size: 20px;
   text-transform: uppercase; }
 
 .eventsbydate li, .announcements li {
