--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -232,6 +232,7 @@ Events by Date
 	border-top: 4px solid $yellow;
 }
 .eventsbydate .title, .announcements .title {
+	font-size: 20px;
 	text-transform: uppercase;
 }
 .eventsbydate li, .announcements li {
