adding sidenav, updating image slider, adding accessible dropdown menu
Signed-off-by: Brandon Ewoldt <bewoldt1@gmail.com>

--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -37,6 +37,7 @@
 @import "site/_footer";
 @import "site/_nav";
 @import "site/_calendar";
+@import "site/sidenav";
 @import "site/_todaysevents";
 @import "site/_breadcrumbs";
 
