replacing division-bar with uiowa-bar

--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -3,7 +3,7 @@
 @import "_config";
 
 @import "../../../division-bar/scss/division-bar";
-
+@import "../../../uiowa-bar/scss/uiowa-bar.scss";
 /* Global Settings
 -------------------------------------------*/
 @import "global/_mixins";
