adding new header and fields for bg images.

--- a/themes/homecoming/scss/_config.scss
+++ b/themes/homecoming/scss/_config.scss
@@ -1,7 +1,7 @@
 /*-------------------------------------------
     Colors
 -------------------------------------------*/
-$link: #0088cc;
+$link: #005885;
 $yellow: #ffce39;
 
 
@@ -25,5 +25,4 @@ $body-font: "proxima-nova",sans-serif;
 $break-small: 480px;
 $break-medium: 768px;
 $break-large: 1040px;
-$break-xlarge: 1140px;
-$break-xxlarge: 1280px;
+$break-xlarge: 1200px;
