--- a/themes/homecoming/scss/site/_nav.scss
+++ b/themes/homecoming/scss/site/_nav.scss
@@ -2,77 +2,43 @@
 Navigation
 --------------------------------------------------------------- */
 
-/* Left */
-.nav-left, .nav-right {
-	@media screen and (min-width: $break-medium) {
-		float: left;
-		width: 40%;
-	}
-}
-.nav-right {
-	@media screen and (min-width: $break-medium) {
-		float: right;
-	}
-}
-.main-nav > li.parent > a:after {
-	@media screen and (min-width: $break-medium) {
-		content: "\e114";
-		display: inline-block;
-		font-family: 'Glyphicons Halflings';
-		font-size: 11px;
-		font-style: normal;
-		font-weight: 400;
-		position: relative;
-		right: -5px;
-	}
-}
 
-
-/* current link */
-.main-nav .current > a {
-	background-color: #222;
-	color: $yellow;
-	text-decoration: none;
-}
-
-
-/* ---------------------------------------------------------------
-New
---------------------------------------------------------------- */
 .nav-holder {
 	margin: .5em .5em 1em;
 	@media screen and (min-width: $break-medium) {
 		margin: 0;
-		background: #e8e8e2;
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e8e2), color-stop(100%,#dcdcd2));
-		background: -webkit-linear-gradient(top,  #e8e8e2 0%,#dcdcd2 100%);
-		background: linear-gradient(to bottom,  #e8e8e2 0%,#dcdcd2 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e2', endColorstr='#dcdcd2',GradientType=0 );
-		border-top: 1px solid rgba(255,255,255,.5);
-		xborder-bottom: 1px solid #d1d1d1;
+		border-top: 1px solid #2c2c2c;
 		position: relative;
 		z-index: 1;
+		&:after {
+			background-color: #ffcd00;
+			display: block;
+			width: 100%;
+			height: 4px;
+			position: absolute;
+			bottom: 0;
+			content: "";
+			z-index: -1;
+		}
 	}
 }
-.nav-main-wrapper {
-	text-align: center;
+
+.expand .mainnav__title {
+	border-bottom: 1px solid #666;
+}
+
+
+
+.mainnav {
 	max-height: 600px;
 	border: none;
 	background: inherit;
 	box-shadow: inherit;
 	margin-bottom: 0;
 	@media screen and (max-width: 767px) {
-		background: #ffffff; /* Old browsers */
-		background: -moz-linear-gradient(top,  #ffffff 0%, #f2f2f2 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f2f2f2)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  #ffffff 0%,#f2f2f2 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  #ffffff 0%,#f2f2f2 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  #ffffff 0%,#f2f2f2 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  #ffffff 0%,#f2f2f2 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
-		-webkit-box-shadow: 0 1px 4px rgba(0,0,0,.07);
+		background: #444;
 		border-radius: 4px;
-		border: 1px solid #d4d4d4;
+		border: 1px solid #666;
 		display: block;
 		max-height: 44px;
 		overflow: hidden;
@@ -82,180 +48,185 @@ New
 	&.expand {
 		max-height: 600px;
 	}
-}
-.nav-title {
-	font-family: $heading-font;
-	font-size: em(20);
-	font-weight: 300;
-	line-height: 44px;
-	margin: 0;
-	position: relative;
-	text-align: left;
-	text-transform: uppercase;
-	& a {
-		color: #222;
-		display: block;
-		padding: 0 15px;
-		&:hover {
-			text-decoration: none;
+	&__title {
+		font-size: em(20);
+		font-weight: 300;
+		line-height: 44px;
+		margin: 0;
+		position: relative;
+		text-align: left;
+		& a {
+			color: #eee;
+			display: block;
+			padding: 0 15px;
+			&:hover {
+				text-decoration: none;
+			}
+		}
+		@media screen and (min-width: $break-medium) {
+			display: none;
 		}
 	}
-	@media screen and (min-width: $break-medium) {
-		display: none;
-	}
-}
-.expand .nav-title {
-	background: #eee;
-	border-bottom: 1px solid #ddd;
-}
-.nav-title span {
-	border-radius: 4px;
-	width: 40px;
-	height: 32px;
-	position: absolute;
-	top: 5px;
-	right: 10px;
-	border: 1px solid #d5d5d5;
-	background: #f2f2f2; /* Old browsers */
-	background: -moz-linear-gradient(top,  #f2f2f2 0%, #e5e5e5 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2f2f2), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #f2f2f2 0%,#e5e5e5 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #f2f2f2 0%,#e5e5e5 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #f2f2f2 0%,#e5e5e5 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #f2f2f2 0%,#e5e5e5 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-	-webkit-box-shadow: inset 0 1px 0 #fff;
-	-moz-box-shadow: inset 0 1px 0 #fff;
-	-ms-shadow: inset 0 1px 0 #fff;
-	box-shadow: inset 0 1px 0 #fff;
-	&:after {
-		-webkit-box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
-		-moz-box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
-		-ms-box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
-		box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
+	&__expandcollapse {
+		background-color: #333;
+		border-radius: 4px;
+		width: 40px;
+		height: 32px;
 		position: absolute;
-		left: 11px;
-		top: 0;
-		display: block;
-		width: 16px;
-		height: 0;
-		color: #888888;
+		top: 5px;
+		right: 10px;
+		border: 1px solid rgba(255,255,255,.2);
+		&:after {
+			-webkit-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
+			-moz-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
+			-ms-box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
+			box-shadow: 0 10px 0 1px #bbb, 0 16px 0 1px #bbb, 0 22px 0 1px #bbb;
+			position: absolute;
+			left: 11px;
+			top: 0;
+			display: block;
+			width: 16px;
+			height: 0;
+			color: #888888;
+			padding: 0;
+			content: '';
+		}
+	}
+	&__list {
+		background-color: #444;
+		margin: 0;
 		padding: 0;
-		content: '';
+		list-style: none;
+		@media screen and (min-width: $break-medium) {
+			background-color: inherit;
+			display: flex;
+			justify-content: space-between;
+		}
 	}
-}
+	&__listitem {
+		position: relative;
+		&--active {
+			& > a {
+				background-color: #333;
+				font-weight: bold;
+				@media screen and (min-width: $break-medium) {
+					background-color: #222;
+					color: $yellow;
+				}
+			}
+		}
+		&--parent {
 
-
-
-
-/* ---------------------------------------------------------------
-
---------------------------------------------------------------- */
-.main-nav {
-	border-right: 1px solid rgba(0,0,0,0.1);
-	@media screen and (min-width: $break-medium) {
-		border-top: none;
-		text-align: center;
+		}
+		@media screen and (min-width: $break-medium) {
+			&:hover > a {
+				background-color: #222;
+				color: $yellow;
+				text-decoration: none;
+			}
+		}
 	}
-}
-.main-nav, .main-nav ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-.main-nav li {
-	position: relative;
-	@media screen and (min-width: $break-medium) {
-		border-left: 1px solid rgba(0,0,0,.1);
-		float: left;
-		width: 25%;
-		&:hover > a {
-			background-color: #222;
-			color: $yellow;
-			text-decoration: none;
+	&__anchor {
+		color: #eee;
+		border-bottom: 1px solid #666;
+		display: block;
+		font-size: 14px;
+		padding: .8em 0 .8em 15px;
+		position: relative;
+
+		@media screen and (min-width: $break-medium) {
+			border-bottom: none;
+			font-family: $heading-font;
+			font-weight: bold;
+			font-size: 16px;
+			padding: .8em 1em;
+			text-transform: uppercase;
+		}
+		@media screen and (min-width: $break-large) {
+			font-size: 18px;
+		}
+		@media screen and (min-width: $break-xlarge) {
+			padding: .8em 2em;
+		}
+	}
+	&__sublist {
+		display: none;
+		list-style: none;
+		margin: 0;
+		@media (min-width: $break-medium) {
+			display: block;
+			box-shadow: 0 4px 3px rgba(0,0,0,0.3);
+			position: absolute;
+			top: 100%;
+			left: -9999px;
+			width: 200px;
+			background: #222;
 		}
 	}
 }
-.main-nav li a {
-	border-bottom: 1px solid #ddd;
-	display: block;
-	font-size: 14px;
-	padding: .8em 0 .8em 15px;
-	position: relative;
-	@media screen and (max-width: 767px) {
-		text-align: left; /* for internet explorer */
-	}
-	@media screen and (min-width: $break-medium) {
-		border-bottom: none;
-		color: #333;
-		font-family: $heading-font;
-		font-size: 15px;
-		padding: 8px 0;
-		white-space: nowrap;
-	}
-	@media screen and (min-width: 900px) {
-		font-size: 16px;
-	}
-	@media screen and (min-width: $break-large) {
-		font-size: 17px;
+
+
+.mainnav__anchor--parent:after {
+	@media (min-width: $break-medium) {
+		width: 0;
+		height: 0;
+		border: 4px inset;
+		content: "";
+		border-bottom-width: 0;
+		border-top-style: solid;
+		border-color: #fff transparent transparent;
+		display: inline-block;
+		margin-left: 7px;
+		margin-bottom: 5px;
 	}
 }
+.mainnav__anchor--parent:hover {
+	&:after {
+		border-color: $yellow transparent transparent;
+	}
+}
+
+
 /* Top level hover state, preserve hover state when hovering dropdown  */
-.main-nav li > a:hover,
-.main-nav li > a:focus,
-.main-nav li:focus > a,
-.main-nav li:hover > a {
-	background: #eee;
+.mainnav__listitem > a:hover,
+.mainnav__listitem > a:focus,
+.mainnav__listitem:focus > a,
+.mainnav__listitem:hover > a {
 	@media screen and (min-width: $break-medium) {
 		background-color: #222;
 		color: $yellow;
 		text-decoration: none;
 	}
 }
-/* current link */
-.main-nav .active > a {
-	background-color: #222;
-	color: $yellow;
-	text-decoration: none;
-}
+
 
 /* ---------------------------------------------------------------
 Dropdowns
 --------------------------------------------------------------- */
-.main-nav ul {
-	display: none;
-	@media (min-width: $break-medium) {
-		display: block;
-		box-shadow: 0 4px 3px rgba(0,0,0,0.3);
-		position: absolute;
-		top: 40px;
-		left: -9999px;
-		width: 200px;
-		background: #222;
-	}
-}
-
-.main-nav li:hover ul,
-.main-nav li:focus ul,
+.mainnav__listitem--parent:hover ul,
+.mainnav__listitem--parent:focus ul,
 ul.show-menu {
 	left: 0;
 }
-.main-nav ul li {
+.mainnav__sublist li {
 	float: none;
 	position: static;
 	width: auto;
 }
-.main-nav ul a {
+.mainnav__sublist a {
 	display: block;
 	border-bottom: 1px solid #ddd;
 	display: block;
 	font-size: 14px;
+	font-weight: normal;
 	padding: .8em 0 .8em 15px;
 	position: relative;
 	text-align: left;
 	-webkit-transition: all .2s linear;
 	-moz-transition: all .2s linear;
 	transition: all .2s linear;
+	text-transform: none;
+	font-family: $body-font;
 	@media screen and (min-width: $break-medium) {
 		border-bottom-color: #333;
 		color: #fff;
@@ -271,11 +242,11 @@ ul.show-menu {
 		}
 	}
 }
-.main-nav > li.last:hover ul {
+.mainnav__list > li.last:hover ul {
   left: auto;
   right: 0;
 }
-.main-nav li.active a {
+.mainnav__list li.active a {
 	@media (max-width: $break-medium - 1) {
 		background-color: #eee;
 		color: $link;
